remove sun count
