# src/routes/games/game.schemas.ts
@@ -6,7 +6,6 @@ const schemas = {
   post: object().keys({
     user: string().required(),
     level: number().required(),
-    suns: number(),
     win: boolean(),
     zombiesKilled: number(),
     plantsPlanted: number(),
@@ -14,7 +13,6 @@ const schemas = {
   put: object().keys({
     _id: string(),
     level: number().required(),
-    suns: number(),
     win: boolean(),
     zombiesKilled: number(),
     plantsPlanted: number(),
